# mokuro-reader

./: Cargo.toml  README.md  index.html  styles.css
src/: errors.rs  home.rs  icons.rs  main.rs  models.rs  notify.rs  reader.rs  upload.rs
src/utils/: archive.js  db.rs  hooks.rs  mod.rs  web.rs  zip.rs
