[package]
name = "mokuro-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-console = "0.3"
gloo-file = { version = "0.3", features = ["futures"] }
implicit-clone = { version = "0.4.9", features = ["serde"] }
js-sys = "0.3"
rexie = "0.5.0"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "DragEvent",
    "DataTransfer",
    "HtmlElement",
    "HtmlInputElement",
    "Navigator",
    "Node",
    "StorageManager",
] }
yew = { version = "0.21", features = ["csr"] }
yew-autoprops = "0.4.1"
zip = { version = "2.1.3", default-features = false, features = [
    "deflate",
    "deflate64",
    # "time",
    # "zstd",
] }
wasm-bindgen-futures = "0.4.42"
wasm-timer = "0.2.5"
yew-router = "0.18.0"
