[package]
name = "mokuro-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
enclose = "1.2.0"
gloo-console = "0.3"
gloo-dialogs = "0.2.0"
gloo-events = "0.2.0"
gloo-file = { version = "0.3", features = ["futures"] }
implicit-clone = { version = "0.4.9", features = ["serde"] }
js-sys = "0.3"
rexie = "0.5.0"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
uuid = { version = "1.9.1", features = ["v7", "js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
wasm-timer = "0.2.5"
web-sys = { version = "0.3", features = ["ClipboardEvent", "DragEvent", "DataTransfer", "Document", "DomRect", "Element", "HtmlElement", "HtmlInputElement", "Navigator", "Node", "Selection", "StorageManager", "Range"] }
yew = { version = "0.21", features = ["csr"] }
yew-autoprops = "0.4.1"
yew-hooks = "0.3.2"
yew-router = "0.18.0"
zip = { version = "2.1.3", default-features = false, features = ["deflate", "deflate64"] }
